# otus_homework_15

./: .travis.yml  CMakeLists.txt  README.md
data/: data_kmm.txt  data_sky.txt
gnuplot/: example.sh  get_png.plt  round.sh  sky.sh
src/: CMakeLists.txt  main.cpp
